logs/service/build.make.009.log.stderr
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:8:1: error: ‘ros’ does not name a type
 ros;:Time begin;
 ^
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:8:5: error: expected unqualified-id before ‘:’ token
 ros;:Time begin;
     ^
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:35:5: error: ‘begin’ was not declared in this scope
     begin = ros::Time::now().toSec();
     ^
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:35:5: note: suggested alternatives:
In file included from /usr/include/boost/range/functions.hpp:18:0,
                 from /usr/include/boost/range/iterator_range_core.hpp:38,
                 from /usr/include/boost/lexical_cast.hpp:30,
                 from /opt/ros/kinetic/include/ros/transport_hints.h:34,
                 from /opt/ros/kinetic/include/ros/subscribe_options.h:33,
                 from /opt/ros/kinetic/include/ros/node_handle.h:41,
                 from /opt/ros/kinetic/include/ros/ros.h:45,
                 from /home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:3:
/usr/include/boost/range/begin.hpp:106:61: note:   ‘boost::range_adl_barrier::begin’
 inline BOOST_DEDUCED_TYPENAME range_iterator<const T>::type begin( const T& r )
                                                             ^
In file included from /usr/include/boost/mpl/list/aux_/begin_end.hpp:17:0,
                 from /usr/include/boost/mpl/list/list0.hpp:27,
                 from /usr/include/boost/mpl/list/list10.hpp:18,
                 from /usr/include/boost/mpl/list/list20.hpp:18,
                 from /usr/include/boost/mpl/list.hpp:36,
                 from /usr/include/boost/math/policies/policy.hpp:9,
                 from /usr/include/boost/math/policies/error_handling.hpp:19,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/kinetic/include/ros/time.h:58,
                 from /opt/ros/kinetic/include/ros/ros.h:38,
                 from /home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:3:
/usr/include/boost/mpl/begin_end_fwd.hpp:22:38: note:   ‘boost::mpl::begin’
 template< typename Sequence > struct begin;
                                      ^
In file included from /usr/include/boost/range/functions.hpp:18:0,
                 from /usr/include/boost/range/iterator_range_core.hpp:38,
                 from /usr/include/boost/lexical_cast.hpp:30,
                 from /opt/ros/kinetic/include/ros/transport_hints.h:34,
                 from /opt/ros/kinetic/include/ros/subscribe_options.h:33,
                 from /opt/ros/kinetic/include/ros/node_handle.h:41,
                 from /opt/ros/kinetic/include/ros/ros.h:45,
                 from /home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:3:
/usr/include/boost/range/begin.hpp:106:61: note:   ‘boost::range_adl_barrier::begin’
 inline BOOST_DEDUCED_TYPENAME range_iterator<const T>::type begin( const T& r )
                                                             ^
make[2]: *** [CMakeFiles/pubvel_discrete_motion.dir/src/pubvel_discrete_motion.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_discrete_motion.dir/all] Error 2
make: *** [all] Error 2
